        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.7-sun3
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 15825
Description: Kernel BUG tries to release flock
Details    : Lustre does not destroy flock lock before last reference goes
             away. So always drop flock locks when client is evicted and 
	     perform unlock regardless of successfulness of speaking to MDS.

Severity   : normal
Bugzilla   : 15210
Description: add recount protection for osc callbacks, so avoid panic on shutdown

Severity   : normal
Bugzilla   : 12653
Description: sanity test 65a fails if stripecount of -1 is set
Details    : handle -1 striping on filesystem in ll_dirstripe_verify

Severity   : normal
Bugzilla   : 14742
Frequency  : rare
Description: ASSERTION(CheckWriteback(page,cmd)) failed
Details    : badly clear PG_Writeback bit in ll_ap_completion can produce false
	     positive assertion.

Severity   : enhancement
Bugzilla   : 15865
Description: Update to RHEL5 kernel-2.6.18-53.1.21.el5.

Severity   : major
Bugzilla   : 15924
Description: do not process already freed flock
Details    : flock can possibly be freed by another thread before it reaches
	     to ldlm_flock_completion_ast.

Severity   : normal
Bugzilla   : 14480
Description: LBUG during stress test
Details    : Need properly lock accesses the flock deadlock detection list.

Severity   : minor
Bugzilla   : 15837
Description: oops in page fault handler
Details    : kernel page fault handler can return two special 'pages' in error case, don't
	     try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.