@@ -3,6 +3,12 @@ m4_define([LUSTRE_MINOR],[9])
 m4_define([LUSTRE_PATCH],[50])
 m4_define([LUSTRE_FIX],[0])
 
+dnl # don't forget to update the service tags info
+m4_define([CLIENT_URN],["LUSTRE-165-CLT"])
+m4_define([MDS_URN],["LUSTRE-165-MDS"])
+m4_define([MGS_URN],["LUSTRE-165-MGS"])
+m4_define([OSS_URN],["LUSTRE-165-OSS"])
+
 dnl # liblustre delta is 0.0.1.32 , next version with fixes is ok, but
 dnl # after following release candidate/beta would spill this warning already.
 m4_define([LUSTRE_VER_ALLOWED_OFFSET],["OBD_OCD_VERSION(0,0,1,32)"])
@@ -24,6 +30,10 @@ m4_define([LUSTRE_VERSION],m4_if(LUSTRE_FIX,[0],LUSTRE_MAJOR.LUSTRE_MINOR.LUSTRE
 [AC_LUSTRE_VER_ALLOWED_OFFSET]=LUSTRE_VER_ALLOWED_OFFSET
 [AC_LUSTRE_LIB_VER_OFFSET_WARN]=LUSTRE_LIB_VER_OFFSET_WARN
 [AC_LUSTRE_CLI_VER_OFFSET_WARN]=LUSTRE_CLI_VER_OFFSET_WARN
+[AC_LUSTRE_CLIENT_URN]=CLIENT_URN
+[AC_LUSTRE_MGS_URN]=MGS_URN
+[AC_LUSTRE_MDS_URN]=MDS_URN
+[AC_LUSTRE_OSS_URN]=OSS_URN
 
 AC_SUBST([AC_LUSTRE_MAJOR])
 AC_SUBST([AC_LUSTRE_MINOR])
@@ -33,3 +43,7 @@ AC_SUBST([AC_LUSTRE_VERSION_STRING])
 AC_SUBST([AC_LUSTRE_VER_ALLOWED_OFFSET])
 AC_SUBST([AC_LUSTRE_LIB_VER_OFFSET_WARN])
 AC_SUBST([AC_LUSTRE_CLI_VER_OFFSET_WARN])
+AC_SUBST([AC_LUSTRE_CLIENT_URN])
+AC_SUBST([AC_LUSTRE_MDS_URN])
+AC_SUBST([AC_LUSTRE_MGS_URN])
+AC_SUBST([AC_LUSTRE_OSS_URN])
