@@ -9,6 +9,10 @@
 #define LUSTRE_PATCH @AC_LUSTRE_PATCH@
 #define LUSTRE_FIX @AC_LUSTRE_FIX@
 #define LUSTRE_VERSION_STRING "@AC_LUSTRE_VERSION_STRING@"
+#define CLIENT_URN "@AC_LUSTRE_CLIENT_URN@"
+#define MDS_URN "@AC_LUSTRE_MDS_URN@"
+#define MGS_URN "@AC_LUSTRE_MGS_URN@"
+#define OSS_URN "@AC_LUSTRE_OSS_URN@"
 
 #define LUSTRE_VERSION_CODE OBD_OCD_VERSION(LUSTRE_MAJOR,LUSTRE_MINOR,LUSTRE_PATCH,LUSTRE_FIX)
 
